--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
           </div>
         <h2>Media Wall Design</h2>
         <p>We create stunning media walls tailored to your style and needs.</p>
-        <p>For more pictures and videos go to us Gallery page</picture></p>
+        <p>For more pictures and videos go to our Gallery page</picture></p>
     </div>
   </section>
 
@@ -76,7 +76,7 @@
               <img src="images/emma14.jpeg" alt="Emma 4" onclick="openModal('images/emma14.jpeg')">
             </div>
         <p>Enhance your walls with our professional paneling services.</p>
-        <p>For more pictures and videos go to us Gallery page</picture></p>
+        <p>For more pictures and videos go to our Gallery page</picture></p>
     </div>
   </section>
 
@@ -89,7 +89,7 @@
           <img src="images/obi3.jpeg" alt="obi 3" onclick="openModal('images/obi3.jpeg')">
         </div>
         <p>Get  a beautiful and well made ceilling design by experts.</p>
-        <p>For more pictures and videos go to us Gallery page</picture></p>
+        <p>For more pictures and videos go to our Gallery page</picture></p>
     </div>
   </section>
 
@@ -100,7 +100,7 @@
           <img src="images/carlow9.jpeg" alt="Carlow 1" onclick="openModal('images/carlow9.jpeg')">
         </div>
         <p>Get beautiful and durable tiles installed by experts.</p>
-        <p>For more pictures and videos go to us Gallery page</picture></p>
+        <p>For more pictures and videos go to our Gallery page</picture></p>
     </div>
   </section>
 
@@ -113,7 +113,7 @@
           <img src="images/perl10.jpeg" alt="perl 3" onclick="openModal('images/perl10.jpeg')">
         </div>
         <p>Upgrade your floors with our elegant wooden flooring solutions.</p>
-        <p>For more pictures and videos go to us Gallery page</picture></p>
+        <p>For more pictures and videos go to our Gallery page</picture></p>
     </div>
   </section>
 </section>
