--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
     <!-- Header with Company Name -->
     <header>
-      <h1 class="company-name">My Company Name</h1>
+      <h1 class="company-name">FLEX INTERIOR DESIGN</h1>
   </header>
 
 <section>
@@ -132,7 +132,7 @@
 
 <h2 id="house-painting">We also do house painting</h2>
 
-<p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, painting and wooden flooring services.</p>
+<p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, wall panelling  and wooden flooring services.</p>
 <p class="large-paragraph">Have questions? Reach out to us for more information.</p>
 <!-- Footer with menu -->
 <footer>
@@ -153,7 +153,7 @@
         <li><a href="gallery.html">Gallery</a></li> <!-- LInk to the galley page-->
       </ul>
       
-    <p>&copy; 2025 My Company. All Rights Reserved.</p>
+    <p>&copy; 2025 flex interior design. All Rights Reserved.</p>
   </section>
   </footer>
   
